<resources>
    <string name="app_name">MillerChecklistAndroid</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="dialog_error">Error!</string>
    <string name="dialog_connection_error">Unable to establish connection to server.</string>

    <string name="submitting_request">Submitting request...</string>

    <string name="default_mutex_url">https://miller-checklist.herokuapp.com</string>
    <string name="api_prefix">/api/v1</string>
    <string name="api_content_type">Content-Type</string>
    <string name="api_content_type_json">application/json</string>

    <string name="api_authentication_path">/authentication</string>
    <string name="api_auth_id">auth_id</string>
    <string name="api_auth_key">auth_key</string>

    <string name="api_auth_header">Authorization</string>

    <string name="api_checklists_path">/checklists</string>
    <string name="api_owner_id">owner_id</string>
    <string name="api_frequency">frequency</string>
    <string name="api_auth_token">Token token=</string>

    <string name="main_welcome_message">Welcome to MUTEX</string>
    <string name="main_login_instructions">Please login with your MUTEX account.</string>
    <string name="main_username_label">Username</string>
    <string name="main_password_label">Password</string>
    <string name="main_login_button">LOGIN</string>
    <string name="main_signup_instructions">If you do not have a MUTEX account,\nplease sign up to create one at our website.</string>
    <string name="dashboard_tab_daily">Daily</string>
    <string name="dashboard_tab_weekly">Weekly</string>
    <string name="dashboard_tab_monthly">Monthly</string>
    <string name="auth_error">Error authenticating user...</string>

    <string name="implement_checklist_button">SUBMIT</string>
    <string name="submit_button">SUBMIT</string>

</resources>
