<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:orientation="vertical"
    tools:context="com.millertronics.millerapp.millerchecklistandroid.MainActivity">

    <ViewFlipper
        android:id="@+id/view_flipper"
        android:layout_height="match_parent"
        android:layout_width="match_parent">


        <TabHost
            android:id="@+id/tabhost"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorDefaultShadeBackground"
                    >
                    <TextView
                        android:id="@+id/dashboard_heading"
                        android:textSize="20sp"
                        android:layout_margin="20dp"
                        android:textColor="@color/colorDefaultShadeFont"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorDefaultShadeFont"
                    android:background="@color/colorDefaultShadeBackground"/>
                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:id="@+id/tab_daily"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:text="Daily Checklists Here"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/tab_weekly"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:text="Weekly Checklists Here"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/tab_monthly"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:text="Monthly Checklists Here"
                            />
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
        </TabHost>

        <!-- Login form view -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorDefaultShadeBackground">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:orientation="vertical">
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="60"
                android:layout_margin="20dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/welcome_textview"
                    android:text="@string/main_welcome_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorDefaultShadeFont"
                    android:textSize="24sp"
                    />
                <TextView
                    android:id="@+id/welcome_login_instructions_textview"
                    android:text="@string/main_login_instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorDefaultShadeFont"
                    android:textSize="16sp"
                    />
                <TextView
                    android:id="@+id/username_label"
                    android:text="@string/main_username_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/colorDefaultShadeFont"
                    android:maxLines="1"
                    />
                <EditText
                    android:id="@+id/username_input"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorDefaultShadeFont"
                    />
                <TextView
                    android:id="@+id/password_label"
                    android:text="@string/main_password_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorDefaultShadeFont"
                    />
                <EditText
                    android:id="@+id/password_input"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/colorDefaultShadeFont"
                    />
                <Button
                    android:id="@+id/login_button"
                    android:text="@string/main_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorDefaultShadeButtonFont"
                    android:background="@color/colorDefaultShadeButton"
                    />
                <TextView
                    android:id="@+id/welcome_signup_instructions_textview"
                    android:text="@string/main_signup_instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:textColor="@color/colorDefaultShadeFont"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:orientation="vertical">
            </LinearLayout>

        </LinearLayout>
    </ViewFlipper>

</LinearLayout>
